# shorter-uuid-rs

./: .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  COPYRIGHT  Cargo.toml  README.md
src/: alphabet.rs  error.rs  lib.rs  proptest_support.rs
